--- a/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
+++ b/app/src/main/res/layout/bottom_sheet_compressor_archive.xml
@@ -115,6 +115,17 @@
             android:text="@string/open_with"
             app:cornerRadius="10dp"/>
 
+        <TextView
+            android:id="@+id/lowStorageWarning"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/low_storage_warning"
+            android:textColor="@android:color/holo_red_dark"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"/>
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnExtract"
             android:layout_width="match_parent"
