--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -115,6 +115,31 @@
             </LinearLayout>
         </HorizontalScrollView>
 
+        <LinearLayout
+            android:id="@+id/storageInfoLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/horizontalScrollView"
+            android:orientation="vertical"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="8dp"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/storageInfoText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:layout_marginBottom="4dp"/>
+
+            <com.google.android.material.progressindicator.LinearProgressIndicator
+                android:id="@+id/storageProgressBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:trackCornerRadius="4dp"/>
+        </LinearLayout>
+
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/circularProgressBar"
             android:layout_width="wrap_content"
@@ -137,7 +162,7 @@
             android:id="@+id/shimmer_view_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/horizontalScrollView"
+            android:layout_below="@id/storageInfoLayout"
             android:layout_marginTop="5dp"
             android:orientation="vertical"
             android:visibility="gone">
@@ -197,7 +222,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_below="@id/horizontalScrollView">
+            android:layout_below="@id/storageInfoLayout">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
