--- a/app/src/main/res/layout/bottom_sheet_option.xml
+++ b/app/src/main/res/layout/bottom_sheet_option.xml
@@ -122,6 +122,30 @@
             android:layout_marginTop="10dp"
             android:visibility="gone"/>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outputPathLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="10dp"
+            app:boxCornerRadiusTopStart="10dp"
+            app:boxCornerRadiusTopEnd="10dp"
+            app:boxCornerRadiusBottomStart="10dp"
+            app:boxCornerRadiusBottomEnd="10dp"
+            android:hint="@string/output_path"
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/ic_folder"
+            app:endIconContentDescription="@string/select_directory">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/outputPathInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textNoSuggestions"
+                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnExtract"
             android:layout_width="match_parent"
