--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
 
 <resources>
     <!-- dialog style -->
-    <style name="MaterialDialog" parent="@style/ThemeOverlay.Material3.MaterialAlertDialog">
+    <style name="MaterialDialog" parent="@style/ThemeOverlay.Material3Expressive.Dialog.Alert">
         <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.ZipXtract.Dialog.Rounded</item>
     </style>
 
