Revert "m3 expressive (test)"
This reverts commit 13691bc59a8816bc1d6c390b98efa056b98ea26c.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,7 @@
   -->
 
 <resources>
-    <style name="AppTheme" parent="Theme.Material3Expressive.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/md_theme_primary</item>
         <item name="colorOnPrimary">@color/md_theme_onPrimary</item>
         <item name="colorPrimaryContainer">@color/md_theme_primaryContainer</item>
